--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -89,6 +89,17 @@
 
 % TU START
 
+@article{clopper_pearson_1934,
+  author  = {Clopper, Charles J. and Pearson, Egon S.},
+  title   = {The Use of Confidence or Fiducial Limits Illustrated in the Case of the Binomial},
+  journal = {Biometrika},
+  volume  = {26},
+  number  = {4},
+  pages   = {404--413},
+  year    = {1934},
+  doi     = {10.1093/biomet/26.4.404}
+}
+
 
 
 @misc{malul_genkubesec_2024,
